--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,12 @@ isolated_build = True
 skipsdist = True
 envlist = py36, py37, py38, lint
 
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37, lint
+    3.8: py38
+
 [testenv]
 whitelist_externals = poetry
 skip_install = true
