--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ python =
 [testenv]
 whitelist_externals = poetry
 skip_install = true
+passenv = INCLUDE LIB LIBPATH
 commands_pre =
     poetry install
 commands =
@@ -23,5 +24,5 @@ skip_install = true
 commands =
     poetry run isort -c -rc src tests
     poetry run yapf -d -r src tests
-    poetry run flake8
+    poetry run flake8 src tests
     poetry run mypy src tests
