--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ yapf = "^0.28.0"
 pytest-datadir = "^1.3"
 tox = "^3.14"
 isort = "^4.3"
+pytest-cov = "^2.8"
 
 [tool.poetry.scripts]
 cmake-format = "cmake_language_server.formatter:main"
