Fix windows build

--- a/tox.ini
+++ b/tox.ini
@@ -12,15 +12,13 @@ python =
 [testenv]
 whitelist_externals = poetry
 skip_install = true
-passenv = INCLUDE LIB LIBPATH
+passenv = INCLUDE LIB LIBPATH Platform VCTools* VSCMD_* WindowsSDK*
 commands_pre =
     poetry install
 commands =
     poetry run pytest -sv tests
 
 [testenv:lint]
-whitelist_externals = poetry
-skip_install = true
 commands =
     poetry run isort -c -rc src tests
     poetry run yapf -d -r src tests
