--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         python: [3.6, 3.7, 3.8]
-        os: [ubuntu-18.04, windows-latest]
+        os: [ubuntu-18.04, windows-2016]
     steps:
       - uses: actions/checkout@v1
       - name: Set up Python ${{ matrix.python }}
