--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,3 +31,10 @@ jobs:
       - name: Test with tox
         run: |
           tox
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          flags: unittests
+          name: Python ${{ matrix.python }} on ${{ matrix.os }}
+          fail_ci_if_error: true
