--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ passenv = INCLUDE LIB LIBPATH Platform VCTools* VSCMD_* WindowsSDK*
 commands_pre =
     poetry install
 commands =
-    poetry run pytest --cov-report=xml -sv tests
+    poetry run pytest --cov-report=xml --cov=src -sv tests
 
 [testenv:lint]
 commands =
