--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,7 @@ jobs:
           CMAKE_VERSION=3.14.7
           curl -sSL https://github.com/Kitware/CMake/releases/download/v$CMAKE_VERSION/cmake-$CMAKE_VERSION-Linux-x86_64.tar.gz | tar xz
           sudo cp -rT cmake-$CMAKE_VERSION-Linux-x86_64 /usr/local
+          rm -rf cmake-$CMAKE_VERSION-Linux-x86_64
       - name: Install dependencies
         run: |
           python -m pip install --upgrade setuptools pip wheel
