--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
         python: [3.6, 3.7, 3.8]
         os: [ubuntu-18.04, windows-2016]
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v1
         with:
@@ -21,12 +21,13 @@ jobs:
       - name: Install CMake
         if: contains(matrix.os, 'ubuntu')
         run: |
-          CMAKE_VERSION=3.14.7
+          CMAKE_VERSION=3.17.3
           curl -sSL https://github.com/Kitware/CMake/releases/download/v$CMAKE_VERSION/cmake-$CMAKE_VERSION-Linux-x86_64.tar.gz | tar xz
           sudo cp -rT cmake-$CMAKE_VERSION-Linux-x86_64 /usr/local
           rm -rf cmake-$CMAKE_VERSION-Linux-x86_64
       - name: Install dependencies
         run: |
+          cmake --version
           python -m pip install --upgrade setuptools pip wheel
           python -m pip install poetry tox-gh-actions
       - name: Test with tox
@@ -38,4 +39,4 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: unittests
           name: Python ${{ matrix.python }} on ${{ matrix.os }}
-          fail_ci_if_error: true
+          fail_ci_if_error: false
