--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,15 @@
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+line_length = 88
+
+[flake8]
+max-line-length = 88
+extend-ignore = E203, W503
+
 [tox]
 isolated_build = True
 skipsdist = True
@@ -21,6 +33,6 @@ commands =
 [testenv:lint]
 commands =
     poetry run isort -c -rc src tests
-    poetry run yapf -d -r src tests
+    poetry run black --diff src tests
     poetry run flake8 src tests
     poetry run mypy src tests
