--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,15 @@
-[isort]
-multi_line_output = 3
-include_trailing_comma = True
-force_grid_wrap = 0
-use_parentheses = True
-ensure_newline_before_comments = True
-line_length = 88
-
-[flake8]
-max-line-length = 88
-extend-ignore = E203, W503
-
 [tox]
 isolated_build = True
 skipsdist = True
-envlist = py36, py37, py38, lint
+envlist = py36, py37, py38, py39, lint
+allowlist_externals = git
 
 [gh-actions]
 python =
     3.6: py36
-    3.7: py37, lint
-    3.8: py38
+    3.7: py37
+    3.8: py38, lint
+    3.9: py39
 
 [testenv]
 whitelist_externals = poetry
@@ -32,7 +22,6 @@ commands =
 
 [testenv:lint]
 commands =
-    poetry run isort -c -rc src tests
-    poetry run black --diff src tests
-    poetry run flake8 src tests
-    poetry run mypy src tests
+    poetry run pysen run format
+    git diff --exit-code --ignore-submodules
+    poetry run pysen run lint
