--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,6 @@
 isolated_build = True
 skipsdist = True
 envlist = py36, py37, py38, py39, lint
-allowlist_externals = git
 
 [gh-actions]
 python =
@@ -12,7 +11,9 @@ python =
     3.9: py39
 
 [testenv]
-whitelist_externals = poetry
+allowlist_externals =
+    poetry
+    git
 skip_install = true
 passenv = INCLUDE LIB LIBPATH Platform VCTools* VSCMD_* WindowsSDK*
 commands_pre =
