--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,38 @@
 [tox]
 isolated_build = True
 skipsdist = True
-envlist = py36, py37, py38, py39, lint
+envlist = py{36,37,38,39,310}-{linux,windows}
 
 [gh-actions]
 python =
     3.6: py36
     3.7: py37
-    3.8: py38, lint
+    3.8: py38
     3.9: py39
+    3.10: py310
+
+[gh-actions:env]
+os =
+    ubuntu-18.04: linux
+    windows-2019: windows
 
 [testenv]
 allowlist_externals =
     poetry
     git
 skip_install = true
-passenv = INCLUDE LIB LIBPATH Platform VCTools* VSCMD_* WindowsSDK*
+passenv = *
 commands_pre =
     poetry install
 commands =
-    poetry run pytest --cov-report=term --cov-report=xml --cov=src -sv tests
+    pytest --cov-report=term --cov-report=xml --cov=src -sv tests
 
-[testenv:lint]
-commands =
-    poetry run pysen run format
+    pip install "pysen[lint]"
+    pip install "black>=22.3.0"
+    pysen run format
     git diff --exit-code --ignore-submodules
-    poetry run pysen run lint
+    pysen run lint
+
+[testenv:py310-windows]
+commands =
+    pytest --cov-report=term --cov-report=xml --cov=src -sv tests
