--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,13 +20,13 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 pygls = "^0.11"
-pyparsing = "^2.4"
 importlib-metadata = {version = "^4.8", python = "<3.8"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
 pytest-datadir = "^1.3"
 pytest-cov = "^2.11"
+cmakelang = "^0.6.13"
 
 [tool.poetry.scripts]
 cmake-language-server = "cmake_language_server.server:main"
