--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
+env_list = py{37,38,39,310}
 isolated_build = True
-skipsdist = True
-envlist = py{36,37,38,39,310}-{linux,windows}
+passenv = *
 
 [gh-actions]
 python =
@@ -10,28 +10,8 @@ python =
     3.9: py39
     3.10: py310
 
-[gh-actions:env]
-os =
-    ubuntu-18.04: linux
-    windows-2019: windows
-
 [testenv]
-allowlist_externals =
-    poetry
-    git
-skip_install = true
-passenv = *
-commands_pre =
-    poetry install
+groups = dev, lint
 commands =
-    pytest --cov-report=term --cov-report=xml --cov=src -sv tests
-
-    pip install "pysen[lint]"
-    pip install "black>=22.3.0"
-    pysen run format
-    git diff --exit-code --ignore-submodules
-    pysen run lint
-
-[testenv:py310-windows]
-commands =
-    pytest --cov-report=term --cov-report=xml --cov=src -sv tests
+    lint
+    test
