--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 env_list = py{37,38,39,310}
 isolated_build = True
 passenv = *
+setenv =
+    PDM_IGNORE_SAVED_PYTHON="1"
 
 [gh-actions]
 python =
@@ -11,7 +13,9 @@ python =
     3.10: py310
 
 [testenv]
-groups = dev, lint
+allowlist_externals =
+    pdm
 commands =
-    lint
-    test
+    pdm install --dev -G :all
+    pdm run lint
+    pdm run test
