--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 dependencies = [
     "pygls>=1.1.1",
 ]
-requires-python = ">=3.8.0,<=3.13"
+requires-python = ">=3.8.0,<3.14"
 readme = "README.md"
 license = {text = "MIT"}
 keywords = ["cmake", "completion", "vim", "lsp"]
